# week3_gazebo_task2

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  package.xml
data/: task2_final.bag  task2_final.csv
docker/: Dockerfile  entrypoint.sh
launch/: task2_mavros.launch  task2_mission.launch  task2_plotjuggler.launch  task2_record.launch
scripts/: check_submission.py  check_submission.sh  plot_flight.py  start_task2_all.sh  start_task2_docker.sh  start_task2_host.sh  start_task2_sim.sh  task2_logger.py  task2_mission.py
worlds/: task2_landmarks.world
