<?xml version="1.0"?>
<package format="2">
  <name>week3_gazebo_task2</name>
  <version>0.1.0</version>
  <description>Independent PX4 Gazebo simulation, flight logging, and analysis for week 3 task 2.</description>

  <maintainer email="15945371128@163.com">Guo ZiYu</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>plotjuggler_ros</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
</package>
